# routes/tasks.js
@@ -3,6 +3,9 @@ const router = express.Router();
 const taskController = require('../controllers/tasksController');
 
 router.get('/', taskController.getAllTasks);
+router.get('/:id', taskController.getTaskById);
 router.post('/', taskController.createTask);
+router.put('/:id', taskController.updateTask);
+router.delete('/:id', taskController.deleteTask);
 
 module.exports = router;
